// The opendata messages.

syntax = "proto3";

package datasets.v1;

import "google/protobuf/timestamp.proto";

import "datasets/v1/well_known_types.proto";

/*
 * Messages relevant for SAR granules (e.g. ERS SAR, Sentinel-1)
 */

// ASFSarGranule contains metadata for a single SAR granule hosted by the Alaska Satellite Facility (ASF).
// Currently, it is used for ERS SAR granules and Sentinel-1 SAR granules.
message ASFSarGranule {
  // granule level fields
  string granule_name = 1;  // ERS SAR granule name (also referred to as scene name)
  ProcessingLevel processing_level = 2;  // Processing level, e.g. L0, L1, RAW, ...
  string group = 3;  // Processing group
  int64 orbit = 4;  // orbit number
  int64 path = 5;  // path number
  int64 frame = 6;  // frame number
  FlightDirection flight_direction = 7;  // flight direction of the granule

  // time and location fields
  // start_time is stored as the timestamp in the ulid and returned as DatapointMetadata event_time
  google.protobuf.Timestamp stop_time = 8;  // start time of the granule
  google.protobuf.Timestamp processing_time = 9;  // processing time of the granule
  LatLon center = 10;  // center point of the granule
  GeobufData geometry = 11;  // geometry/footprint of the granule

  // file fields
  // the actual file name of the granule can be inferred from the granule name, the processing level and the platform
  OpendataProvider storage_provider = 12; // provider of the granule file
  int64 file_size = 13;  // file size in bytes
  string md5sum = 14;  // md5sum of the file
  // Whether a quicklook image is available.
  // The actual quicklook image name can be inferred from the granule name and the platform.
  bool quicklook_available = 15;

  // radar specific parameters
  Polarization polarization = 16; // Polarization
  // 17 used to be the acquisition mode, but it was removed because it was only used for Sentinel-1
  int64 insar_stack_id = 18;  // Interferometric synthetic-aperture radar (InSAR) stack id
  double insar_baseline = 19;  // Interferometric synthetic-aperture radar (InSAR) baseline
}

// UmbraSarGranule contains metadata for a single SAR granule available on the Umbra Opendata S3 Bucket,
// provided by Umbra Space.
message UmbraSarGranule {
  // granule level fields
  string granule_name = 1;  // Umbra SAR granule name
  ProcessingLevel processing_level = 2;  // Processing level, e.g. L0, L1, RAW, ...
  int64 satellite = 3;  // satellite, e.g. 4 for UMBRA-04, 5 for UMBRA-05, ...
  FlightDirection flight_direction = 4;  // flight direction of the granule (ASCENDING, DESCENDING)
  ObservationDirection observation_direction = 5;  // observation direction of the granule (LEFT, RIGHT)

  // time and location fields
  // start_time is stored as the timestamp in the ulid and returned as DatapointMetadata event_time
  google.protobuf.Timestamp stop_time = 6;  // start time of the granule
  LatLonAlt center = 7;  // center point of the granule
  GeobufData geometry = 8;  // geometry/footprint of the granule

  // file fields
  // the actual file name of the granule can be inferred from the granule name, the processing level and the platform
  OpendataProvider storage_provider = 9; // provider of the granule file
  // location of the granule file in the S3 Umbra bucket, relative to the `sar-data/tasks` directory
  // there is some logic to the naming scheme, but it is not standardized across all granules and sometimes there are
  // arbitrary suffixes ore upper/lower case differences, so it is not possible to infer the full file name from
  // the granule name and the remaining fields.
  string location = 10;

  // radar specific parameters
  // https://www.geospatialworld.net/article/sar-imagery-and-quality-metrics/
  Polarization polarization = 11; // Polarization
  AcquisitionMode acquisition_mode = 12;
  double base_ipr = 13;  // Base IPR (Impulse Response Ratio)
  double target_ipr = 14;  // Target IPR
  // Umbra product sku (e.g. "UMB-SPOTLIGHT-100-1") can be derived from the above ipr fields.
  // The first number is the base ipr * 100, the second number is the ratio of the target ipr to the base ipr.
  double radar_center_frequency_hz = 15;  // Radar center frequency in Hz
  double time_of_center_of_aperture_polynomial = 16;  // Time of center of aperture polynomial
  double angle_azimuth_degrees = 17;  // Angle azimuth
  double angle_grazing_degrees = 18;  // Angle elevation
  double angle_incidence_degrees = 19;  // Angle incidence
  double angle_squint_degrees = 20;  // Angle squint
  double slant_range_meters = 21;  // Slant range in meters
  double max_ground_resolution_range_meters = 22;  // Maximum ground resolution range in meters
  double max_ground_resolution_azimuth_meters = 23;  // Maximum ground resolution azimuth in meters
  double altitude = 24;  // altitude of the granule
}

// CopernicusDataspaceGranule contains metadata for a single granule provided by the Copernicus Dataspace.
// Those are e.g. Sentinel granules, but also some other datasets queryable by the Copernicus Dataspace,
// such as Landsat.
message CopernicusDataspaceGranule {
  string granule_name = 1;
  ProcessingLevel processing_level = 2;  // processing level
  string satellite = 3;  // satellite name ("collection" in the JSON)
  FlightDirection flight_direction = 26;  // flight direction of the granule (ASCENDING, DESCENDING)
  string product_type = 4;
  UUID copernicus_id = 5;  // product id in the copernicus catalog
  bool online = 6;  // status == "ONLINE"
  string platform = 7;  // platform name
  string instrument = 8;  // instrument name
  int64 orbit_number = 9;  // orbit number
  int64 relative_orbit_number = 10;  // orbit number relative to the start of the repeat cycle
  double processing_baseline = 11;
  string timeliness = 12;  // timeliness of the product

  // time and location fields
  // start_time is stored as the timestamp in the ulid and returned as DatapointMetadata event_time
  google.protobuf.Timestamp stop_time = 13;  // start time of the granule
  LatLon center = 14;  // center point of the granule
  GeobufData geometry = 15;  // geometry/footprint of the granule
  google.protobuf.Timestamp published = 16;  // the time the granule was published to the catalog
  google.protobuf.Timestamp updated = 17;  // the time the granule was last updated in the catalog

  // file fields
  OpendataProvider storage_provider = 18; // provider of the granule file
  string location = 19;
  int64 file_size = 20;
  string quicklook = 21;
  string thumbnail = 22;

  double snow_cover = 23;
  double cloud_cover = 24;
  int64 resolution = 25;
  // 26 is flight_direction

  Polarization polarization = 27; // Polarization (relevant for Sentinel-1)
  // Acquisition mode, also referred to as sensor mode in the Sentinel-1 documentation
  AcquisitionMode acquisition_mode = 28;
  // Enumeration of swath identifiers applicable to this product (string enumeration, separated by spaces)
  string swath = 29;
  // The mission take ID of the Sentinel-2 product
  string mission_take_id = 30;

  // Landsat-8 specific fields
  int64 bands = 31;
  int64 path = 32;
  int64 row = 33;
  double sun_azimuth = 34;
  double sun_elevation = 35;
}
